--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div>
                 <br />
-                <button id="btnCsv"><a href="http://localhost/task/api/upload">upload csv tracked time</a></button>
+                <button id="btnCsv">upload csv tracked time</button>
             </div>
             <div>   <h2>Billable hours</h2>
                 <input type="text" id="proId" placeholder="project id" />
